bootstrap/kubernetes/hubble-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: default
  hostnames:
  - hubble.athena.asn.casa
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
